--- a/style.css
+++ b/style.css
@@ -10,3 +10,28 @@ h1 {
 .main {
     margin-top: 50px;
 }
+
+.parallax {
+    min-height: 750px;
+    background: url("img/hotel.jpg") no-repeat fixed center;
+    background-size: cover;
+}
+
+tr:hover {
+    cursor: pointer;
+    color: dimgray;
+}
+
+.container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
